unrelated clean-up: use getFirst()